Mudei  o efeito dos links acessados de display none para opacity 0.3

--- a/styles/style-deismo.css
+++ b/styles/style-deismo.css
@@ -72,6 +72,13 @@ h4{
     scroll-snap-align: start;
     box-sizing: border-box;
 }
+#tela-final {
+    display: none;
+}
+#link {
+    margin:auto;
+}
+
 .tooltip {
     display: inline-block;
 }
