--- a/styles/style-agnosticismo.css
+++ b/styles/style-agnosticismo.css
@@ -80,6 +80,13 @@ img{
     scroll-snap-align: start;
     box-sizing: border-box;
 }
+#tela-final {
+    display: none;
+}
+#link {
+    margin:auto;
+}
+
 .tooltip {
     display: inline-block;
 }
