--- a/styles/style-gnosticismo.css
+++ b/styles/style-gnosticismo.css
@@ -71,6 +71,13 @@ h4{
 img{
     width: 100%;
 }
+#tela-final {
+    display: none;
+}
+#link {
+    margin:auto;
+}
+
 .tooltip {
     display: inline-block;
 }
