--- a/styles/media-pagina2.css
+++ b/styles/media-pagina2.css
@@ -173,7 +173,7 @@
         left: 30%;
         bottom: 82%;
     }
-    .opcoes {
+    #opcoes {
         height: 100vh;
     }
 }
@@ -222,7 +222,7 @@
         height: 100vh;
     }
 
-    .opcoes {
+    #opcoes {
         height: 100vh;
     }
 
@@ -244,7 +244,7 @@
         left: 125px;
         bottom: 490px;
     }
-    .opcoes {
+    #opcoes {
         height: 100vh;
     }
 }
