--- a/styles/style-ateismo.css
+++ b/styles/style-ateismo.css
@@ -288,7 +288,7 @@ img{
 .tooltip:hover .tooltip11 {
     visibility: visible;
 }
-.opcoes {
+#opcoes {
     width: 90%;
     margin: auto;
     scroll-snap-stop: always;
