--- a/styles/style-pagina2.css
+++ b/styles/style-pagina2.css
@@ -153,7 +153,7 @@ h3 {
 .tooltip:hover .tooltip4 {
     visibility: visible;
 }
-.opcoes {
+#opcoes {
     width: 90%;
     margin: auto;
     scroll-snap-stop: always;
