--- a/styles/media-agnosticismo.css
+++ b/styles/media-agnosticismo.css
@@ -201,7 +201,7 @@
         width: 250px;
     }
     
-    .opcoes {
+    #opcoes {
         height: 100vh;
     }
 }
@@ -257,7 +257,7 @@
         height: 72vh;
     }
 
-    .opcoes {
+    #opcoes {
         height: 100vh;
     }
 
@@ -287,7 +287,7 @@
         width: 250px;
     }
    
-    .opcoes {
+    #opcoes {
         height: 100vh;
     }
 }
