--- a/styles/media-deismo.css
+++ b/styles/media-deismo.css
@@ -185,7 +185,7 @@
         bottom: 45%;
     }
     
-    .opcoes {
+    #opcoes {
         height: 100vh;
     }
 }
@@ -235,7 +235,7 @@
         height: 100vh;
     }
 
-    .opcoes {
+    #opcoes {
         height: 100vh;
     }
 
@@ -262,7 +262,7 @@
         bottom: 51%;
     }
 
-    .opcoes {
+    #opcoes {
         height: 100vh;
     }
 }
