--- a/styles/style-gnosticismo.css
+++ b/styles/style-gnosticismo.css
@@ -189,7 +189,7 @@ img{
 .tooltip:hover .tooltip6 {
     visibility: visible;
 }
-.opcoes {
+#opcoes {
     width: 90%;
     margin: auto;
     scroll-snap-stop: always;
