--- a/styles/style-panteismo.css
+++ b/styles/style-panteismo.css
@@ -159,7 +159,7 @@ img{
 .tooltip:hover .tooltip4 {
     visibility: visible;
 }
-.opcoes {
+#opcoes {
     width: 90%;
     margin: auto;
     scroll-snap-stop: always;
