--- a/styles/style-deismo.css
+++ b/styles/style-deismo.css
@@ -15,6 +15,7 @@ body {
 
 .pagina {
     background-image: url("https://therealgoodlife.com/wp-content/uploads/2016/06/solid_kraft_paper-e1545844788572-500x334.jpeg");
+    background-color: rgb(160, 139, 114);
     background-size: cover;
     box-sizing: border-box;
     max-width: 800px;
