--- a/styles/media-agnosticismo.css
+++ b/styles/media-agnosticismo.css
@@ -3,26 +3,30 @@
     .pagina {
         font-size: 1.6rem;
         line-height: 1.8rem;
+        max-width: 414px;
     }
 
     #quadro1 {
         width: 100vw;
+        max-width: 414px;
+    }
+    #quadro2 {
+        width: 100vw;
+        max-width: 414px;
+    }
+    #quadro4 {
+        width: 100vw;
+        max-width: 414px;
     }
 
     #perfil {
-        width: 135px;
-        height: 280px;
+        width: 108px;
         object-fit: cover;
-        object-position: 100% 100%;
+        object-position: -135px 0;
     }
 
     #texto-perfil {
-        padding: 2% 4% 0 3%;
-        width: 100%;
-    }
-
-    #quadro2 {
-        position: relative;
+        padding: 1% 4% 0 3%;
     }
 
     #quadro3 {
@@ -37,29 +41,34 @@
         margin-bottom: 1%;
     }
     .tooltip .tooltip1 {
-        left: 30%;
-        bottom: 62%;
+        left: 35%;
+        bottom: 48%;
         width: 250px;
     }
     .tooltip .tooltip2 {
-        left: 30%;
-        bottom: 55%;
+        left: 29%;
+        bottom: 38%;
         width: 250px;
     }
     .tooltip .tooltip3 {
-        left: 15%;
-        bottom: 39%;
-        width: 250px;
+        left: 29%;
+        bottom: 17%;
+        width: 270px;
     }
     .tooltip .tooltip4 {
-        left: 17%;
-        bottom: 31%;
-        width: 250px;
+        left: 4%;
+        bottom: 46%;
+        width: 279px;
     }
     .tooltip .tooltip5 {
         left: 17%;
+        bottom: 31%;
+        width: 265px;
+    }
+    .tooltip .tooltip6 {
+        left: 10%;
         bottom: 22%;
-        width: 250px;
+        width: 330px;
     }
 }
 
@@ -69,59 +78,127 @@
     .pagina {
         font-size: 1.4rem;
         line-height: 1.6rem;
+        max-width: 384px;
     }
-
     #quadro1 {
         width: 100%;
     }
+    #perfil {
+        width: 96px;
+        object-fit: cover;
+        object-position: -118px 0;
+    }
 
+    #texto-perfil {
+        padding: 2% 4% 0 3%;
+    }
+    h4{
+        font-size: 1.7rem;
+    }
+    hr {
+        border-color: rgb(70, 7, 3);
+        border-width: 2px;
+        box-shadow: 2px 2px 2px rgb(78, 95, 95);
+        margin: 1% auto;
+    }
     #quadro3 {
         grid-template-rows: 1fr 1.5fr;
     }
 
-    #perfil {
-        width: 124px;
-        height: 280px;
-        object-fit: cover;
-        object-position: 100% 100%;
-    }
-
-    #texto-perfil {
-        padding: 5% 4% 0 3%;
-        width: 100%;
-    }
-
-    h3 {
-        font-size: 1.6rem;
-    }
-    h4{
-        font-size: 1.3rem;
-        margin-bottom: 1%;
-    }
     .tooltip .tooltip1 {
-        left: 30%;
-        bottom: 62%;
+        left: 33%;
+        bottom: 43%;
         width: 220px;
     }
     .tooltip .tooltip2 {
-        left: 30%;
-        bottom: 16%;
+        left: 34%;
+        bottom: 38%;
         width: 220px;
     }
     .tooltip .tooltip3 {
-        left: 19%;
-        bottom: 42%;
+        left: 29%;
+        bottom: 18%;
         width: 250px;
     }
     .tooltip .tooltip4 {
         left: 17%;
-        bottom: 32%;
+        bottom: 45%;
         width: 250px;
     }
     .tooltip .tooltip5 {
-        left: 16%;
-        bottom: 22%;
+        left: 19%;
+        bottom: 29%;
+        width: 232px;
+    }
+    .tooltip .tooltip6 {
+        left: 5%;
+        bottom: 19%;
         width: 250px;
+    }
+}
+/* determina telas com largura até 375px */
+@media (max-width:375px) {
+    .pagina {
+        font-size: 1.5rem;
+        line-height: 1.8rem;
+    }
+    #perfil {
+        width: 350%;
+        object-position: -137px 0;
+    }
+    .tooltip .tooltip1 {
+        left: 37%;
+        bottom: 46%;
+    }
+    .tooltip .tooltip2 {
+        left: 24%;
+        bottom: 35%;
+        width: 240px;
+    }
+    .tooltip .tooltip3 {
+        bottom: 17%;
+    }
+    .tooltip .tooltip4 {
+        bottom: 43%;
+        width: 261px;
+    }
+    .tooltip .tooltip5 {
+        left: 5%;
+        bottom: 26%;
+        width: 305px;
+    }
+    .tooltip .tooltip6 {
+        bottom: 16%;
+        width: 310px;
+    }
+}
+/* determina telas com largura até 360px */
+@media (max-width:360px) {
+    #perfil {
+        width: 362%;
+        object-position: -148px 0;
+    }
+    .tooltip .tooltip1 {
+        left: 35%;
+        bottom: 48%;
+    }
+    .tooltip .tooltip2 {
+        bottom: 39%;
+    }
+    .tooltip .tooltip3 {
+        left: 25%;
+    }
+    .tooltip .tooltip4 {
+        left: 3%;
+        bottom: 42%;
+    }
+    .tooltip .tooltip5 {
+        left: 7%;
+        bottom: 29%;
+    }
+    .tooltip .tooltip6 {
+        left: 7%;
+        bottom: 20%;
     }
 }
 
@@ -134,6 +211,7 @@
         line-height: 2.6rem;
         margin: 0 auto;
         max-width: 790px;
+        position: relative;
     }
 
     #quadro1 {
@@ -144,26 +222,30 @@
         font-size: 1.9rem;
     }
     h4{
-        font-size: 2.5rem;
-        margin-bottom: 4%;
+        font-size: 2.9rem;
+        margin: 2% auto;
     }
 
     #perfil {
-        width: 294%;
+        width: 400%;
     }
 
     #texto-perfil {
-        padding: 9% 5%;
-        line-height: 2.5rem;
+        padding: 2% 5% 0 3%;
     }
 
     #quadro2 {
-        padding: 1% 6%;
-        line-height: 2.7rem;
         height: 100vh;
     }
+    #imgQ2 {
+        width: 97%;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
     #quadro3 {
-        padding: 3% 5%;
+        display: table-cell;
+        vertical-align: middle;
         line-height: 2.7rem;
         height: 100vh;
     }
@@ -172,8 +254,10 @@
         line-height: 2.7rem;
         height: 100vh;
     }
-    #cena{
-        height: 72vh;
+    #imgQ5 {
+        height: 100vh;
+        object-fit: cover;
+        object-position: 0;
     }
     .tooltip .tooltip1 {
         left: 45%;
