--- a/styles/media-ateismo.css
+++ b/styles/media-ateismo.css
@@ -1,4 +1,4 @@
-/* determina telas com largura entre 385 a 428 px */
+/* determina telas com largura entre 391 a 428 px */
 @media (max-width:428px) {
     .pagina {
         font-size: 1.6rem;
@@ -49,17 +49,17 @@
     }
     .tooltip .tooltip3 {
         left: 7%;
-        bottom: 40%;
+        bottom: 42%;
         width: 350px;
     }
     .tooltip .tooltip4 {
         left: 22%;
-        bottom: 37%;
+        bottom: 38%;
         width: 235px;
     }
     .tooltip .tooltip5 {
         left: 20%;
-        bottom: 59%;
+        bottom: 54%;
         width: 280px;
     }
     .tooltip .tooltip6 {
@@ -93,95 +93,171 @@
         width: 245px;
     }
 }
-
 /* ________________________________________&&&&&&&&&&&&___________________________________ */
-/* determina telas com largura até 384px */
-@media (max-width:384px) {
+/* determina telas com largura de 376 até 390px */
+@media (max-width:390px) {
     .pagina {
-        font-size: 1.4rem;
+        font-size: 1.6rem;
         line-height: 1.6rem;
-    }
-
-    #quadro1 {
-        width: 100%;
-    }
-
-    #quadro3 {
-        grid-template-rows: 1fr 1.5fr;
+        max-width: 384px;
     }
 
     #perfil {
-        width: 130px;
-        object-fit: cover;
-        object-position: 0;
+        width: 29%;
+        object-position: -22px;
     }
 
-    #texto-perfil {
-        padding: 2% 4% 0 3%;
-        width: 100%;
-    }
-
-    h3 {
-        font-size: 1.6rem;
-    }
     h4{
-        font-size: 1.5rem;
+        font-size: 2.2rem;
         margin-bottom: 1%;
     }
+    p {
+        margin: 1% 18%;
+    }
     .tooltip .tooltip1 {
-        left: 30%;
-        bottom: 56%;
-        width: 220px;
+        left: 25%;
+        bottom: 51%;
+        width: 240px;
     }
     .tooltip .tooltip2 {
-        left: 17%;
-        bottom: 72%;
+        left: 13%;
+        bottom: 70%;
         width: 257px;
     }
     .tooltip .tooltip3 {
-        left: 19%;
-        bottom: 31%;
-        width: 250px;
+        left: 5%;
+        bottom: 42%;
+        line-height: 18px
     }
     .tooltip .tooltip4 {
-        left: 17%;
-        bottom: 39%;
-        width: 250px;
+        left: 26%;
+        bottom: 40%;
     }
     .tooltip .tooltip5 {
-        left: 16%;
-        bottom: 56%;
-        width: 250px;
+        left: 23%;
+        bottom: 53%;
     }
     .tooltip .tooltip6 {
-        left: 34%;
-        bottom: 64%;
-        width: 200px;
+        left: 8%;
+        bottom: 63%;
     }
     .tooltip .tooltip7 {
-        left: 7%;
-        bottom: 24%;
-        width: 250px;
+        left: 24%;
+        bottom: 18%;
     }
     .tooltip .tooltip8 {
-        left: 14%;
-        bottom: 29%;
-        width: 250px;
+        left: 5%;
+        bottom: 19%;
     }
     .tooltip .tooltip9 {
-        left: 4%;
-        bottom: 53%;
-        width: 250px;
+        left: 20%;
+        bottom: 54%;
+        width: 280px;
     }
     .tooltip .tooltip10 {
-        left: 14%;
-        bottom: 39%;
-        width: 250px;
+        left: 10%;
+        bottom: 42%;
+        width: 300px;
     }
     .tooltip .tooltip11 {
+        left: 23%;
+        bottom: 45%;
+        width: 250px;
+    }
+}
+/* determina telas com largura de 361 até 375px */
+@media (max-width:375px) {
+    #perfil {
+        width: 26%;
+    }
+    .tooltip .tooltip1 {
+        left: 26%;
+    }
+    .tooltip .tooltip2 {
+        left: 11%;
+    }
+    .tooltip .tooltip3 {
+        left: 3%;
+        bottom: 44%;
+    }
+    .tooltip .tooltip4 {
+        left: 5%;
+        bottom: 38%;
+        width: 230px;
+    }
+    .tooltip .tooltip5 {
+        left: 4%;
+    }
+    .tooltip .tooltip6 {
+        left: 22%;
+        bottom: 65%;
+    }
+    .tooltip .tooltip7 {
+        left: 5%;
+        bottom: 21%;
+    }
+    .tooltip .tooltip8 {
+        left: 15%;
+        bottom: 25%;
+    }
+    .tooltip .tooltip9 {
+        left: 18%;
+    }
+    .tooltip .tooltip10 {
+        left: 9%;
+        bottom: 43%;
+    }
+    .tooltip .tooltip11 {
+        left: 25%;
+    }
+}
+/* determina telas com largura até 360px */
+@media (max-width:360px) {
+    #perfil {
+        width: 30%;
+    }
+    .tooltip .tooltip1 {
+        left: 27%;
+        bottom: 53%;
+    }
+    .tooltip .tooltip2 {
+        left: 10%;
+        bottom: 71%;
+    }
+    .tooltip .tooltip3 {
+        left: 5%;
+        bottom: 42%;
+        width: 315px;
+    }
+    .tooltip .tooltip4 {
         left: 24%;
+        bottom: 40%;
+    }
+    .tooltip .tooltip5 {
         bottom: 56%;
-        width: 220px;
+    }
+    .tooltip .tooltip6 {
+        bottom: 68%;
+    }
+    .tooltip .tooltip7 {
+        left: 20%;
+        bottom: 26%;
+    }
+    .tooltip .tooltip8 {
+        left: 5%;
+        bottom: 26%;
+    }
+    .tooltip .tooltip9 {
+        left: 5%;
+        bottom: 51%;
+    }
+    .tooltip .tooltip10 {
+        left: 5%;
+        bottom: 40%;
+    }
+    .tooltip .tooltip11 {
+        left: 26%;
+        bottom: 48%;
     }
 }
 
@@ -193,105 +269,119 @@
         font-size: 1.9rem;
         line-height: 2.6rem;
         margin: 0 auto;
-        max-width: 790px;
+        max-width: 883px;
     }
-
-    #quadro1 {
-        height: 100vh;
-    }
-
+    
     h3 {
         font-size: 1.9rem;
     }
-    h4{
-        font-size: 2.5rem;
-        margin-bottom: 3%;
+    #quadro1 {
+        height: 100vh;
     }
-
     #perfil {
         width: 300%;
     }
-
     #texto-perfil {
-        padding: 7% 5%;
-        line-height: 2.5rem;
+        padding: 5%;
+        margin-top: auto;
+        margin-bottom: auto;
+        line-height: 2.8rem;
     }
-
-    #quadro2 {
-        padding: 4% 6%;
-        line-height: 2.7rem;
-        height: 100vh;
+    h4{
+        font-size: 3.5rem;
+        margin-bottom: 3%;
+    }
+    hr {
+        box-shadow: 4px 3px 5px rgb(78, 95, 95);
+        margin: 3% auto;
     }
     #imgQ2 {
-        width: 100vw;
-        padding-top: 10vh;
+        width: 100%;
+        height: 100vh;
+    }
+    #quadro2 {
+        padding: 0 6%;
+        line-height: 2.7rem;
+        height: 100vh;
+        display: table-cell;
+        vertical-align: middle;
     }
     #quadro3 {
-        padding: 6% 6%;
+        padding: 3% 6%;
         line-height: 2.7rem;
         height: 100vh;
+    }
+    p {
+        margin: 2% auto;
+    }
+    #imgQ4 {
+        width: 92%;
+        height: 100vh;
+        position: relative;
+        left: 35px;
     }
     #quadro4 {
-        padding: 2% 5%;
-        line-height: 2.7rem;
+        line-height: 2.9rem;
         height: 100vh;
+        display: table-cell;
+        vertical-align: middle;
     }
-    #cena{
-        height: 100vh;
+    .tooltip {
+        position: relative;
     }
     .tooltip .tooltip1 {
-        left: 30%;
-        bottom: 42%;
-        width: 250px;
+        left: 2%;
+        bottom: -252%;
+        width: 280px;
     }
     .tooltip .tooltip2 {
-        left: 26%;
-        bottom: 68%;
+        left: -4%;
+        bottom: -411%;
         width: 250px;
     }
     .tooltip .tooltip3 {
-        left: 24%;
-        bottom: 33%;
-        width: 250px;
+        left: -2%;
+        bottom: -580%;
+        width: 420px;
     }
     .tooltip .tooltip4 {
-        left: 18%;
-        bottom: 27%;
+        left: -2%;
+        bottom: 114%;
         width: 250px;
     }
     .tooltip .tooltip5 {
-        left: 8%;
-        bottom: 53%;
+        left: -65%;
+        bottom: -497%;
         width: 250px;
     }
     .tooltip .tooltip6 {
-        left: 29%;
-        bottom: 61%;
+        left: 0%;
+        bottom: -249%;
         width: 250px;
     }
     .tooltip .tooltip7 {
-        left: 7%;
-        bottom: 21%;
+        left: -195%;
+        bottom: -805%;
         width: 250px;
     }
     .tooltip .tooltip8 {
-        left: 30%;
-        bottom: 25%;
+        left: -1%;
+        bottom: -684%;
         width: 250px;
     }
     .tooltip .tooltip9 {
-        left: 30%;
-        bottom: 23%;
-        width: 250px;
+        left: 4%;
+        bottom: -365%;
+        width: 265px;
     }
     .tooltip .tooltip10 {
-        left: 21%;
-        bottom: 36%;
-        width: 250px;
+        left: -56%;
+        bottom: 116%;
+        width: 260px;
     }
     .tooltip .tooltip11 {
-        left: 60%;
-        bottom: 42%;
+        left: -2%;
+        bottom: -310%;
         width: 250px;
     }
     
@@ -299,118 +389,181 @@
         height: 100vh;
     }
 }
-
 /* _____________________________________&&&&&&&&&&&&______________________________________ */
-/* determina telas em landscape com altura de até 390 px */
+/* determina telas em LANDSCAPE com altura de 376 a 390px */
 @media (orientation: landscape) and (max-height: 390px) {
-
     .pagina {
-        font-size: 1.8rem;
-        line-height: 2.4rem;
-        max-width: 667px;
+        max-width: 845px;
     }
 
-    #quadro1 {
-        width: 100%;
-        height: 100vh;
-    }
-
-    h3 {
-        font-size: 1.9rem;
-    }
-    h4{
-        font-size: 2.2rem;
-        margin-bottom: 3%;
-    }
     #perfil {
         width: 341%;
         object-fit: cover;
     }
-
     #texto-perfil {
-        padding: 2% 4%;
+        padding: 0 4%;
         line-height: 2.5rem;      
     }
-
-    #quadro2 {
-        padding: 3% 4%;
-        line-height: 2.3rem;
-        height: 100vh;
+    hr {
+        border-width: 4px;
     }
     #quadro3 {
-        padding: 4%;
-        line-height: 2.3rem;
-        height: 100vh;
+        line-height: 2.6rem;
     }
     #quadro4 {
-        padding: 2% 5%;
-        line-height: 2.1rem;
-        height: 100vh;
-    }
-    #cena{
-        height: 100vh;
-    }
-
-    #opcoes {
-        height: 100vh;
+        line-height: 2.6rem;
     }
 
     .tooltip .tooltip1 {
-        left: 30%;
-        bottom: 53%;
-        width: 250px;
-    }
-    .tooltip .tooltip2 {
-        left: 27%;
-        bottom: 66%;
-        width: 250px;
+        bottom: -287%;
     }
     .tooltip .tooltip3 {
-        left: 46%;
-        bottom: 26%;
-        width: 250px;
+        bottom: -604%;
     }
     .tooltip .tooltip4 {
-        left: 13%;
-        bottom: 46%;
-        width: 250px;
+        left: -267%;
     }
     .tooltip .tooltip5 {
-        left: 4%;
-        bottom: 60%;
-        width: 250px;
+        left: 0%;
+        bottom: -563%;
     }
     .tooltip .tooltip6 {
-        left: 40%;
-        bottom: 65%;
-        width: 250px;
+        bottom: -287%;
     }
     .tooltip .tooltip7 {
-        left: 7%;
-        bottom: 12%;
-        width: 250px;
+        left: 0%;
+        bottom: -550%;
+        width: 360px;
     }
     .tooltip .tooltip8 {
-        left: 30%;
-        bottom: 21%;
-        width: 250px;
+        left: -2%;
+        bottom: -635%;
+        width: 290px;
     }
     .tooltip .tooltip9 {
-        left: 20%;
-        bottom: 56%;
-        width: 250px;
+        left: 0;
+        bottom: -424%;
+        width: 270px;
     }
     .tooltip .tooltip10 {
-        left: 29%;
-        bottom: 46%;
-        width: 250px;
+        left: -144%;
+        bottom: -486%;
+        width: 290px;
     }
     .tooltip .tooltip11 {
-        left: 53%;
-        bottom: 53%;
-        width: 250px;
+        bottom: -357%;
     }
     #opcoes {
         height: 100vh;
+    }
+}
+/* _____________________________________&&&&&&&&&&&&______________________________________ */
+/* determina telas em LANDSCAPE com altura de 361 até 375 px */
+@media (orientation: landscape) and (max-height: 375px) {
+    .pagina {
+        max-width: 667px;
+        font-size: 1.85rem;
+    }
+    #texto-perfil {
+        line-height: 2.4rem;
+    }
+    h4 {
+        font-size: 3.0rem;
+        margin-bottom: 0%;
+    }
+    hr {
+        border-width: 3px;
+        margin: 2% auto;
+    }
+    #imgQ2 {
+        width: 98%;
+        height: 100vh;
+        padding-top: 7%;
+    }
+    #quadro2 {
+        line-height: 2.3rem;
+    }
+    #quadro3 {
+        line-height: 2.3rem;
+        padding: 2% 6%;
+    }
+    p {
+        margin: 0 auto;
+    }
+    #quadro4 {
+        line-height: 2.2rem;
+        padding: 1% 5%;
+    }
+    .tooltip .tooltip2 {
+        bottom: -465%;
+    }
+    .tooltip .tooltip3 {
+        left: -360%;
+        bottom: -681%;
+    }
+    .tooltip .tooltip4 {
+        left: -1%;
+        bottom: 130%;
+    }
+    .tooltip .tooltip5 {
+        left: -66%;
+        bottom: -647%;
+    }
+    .tooltip .tooltip6 {
+        left: -98%;
+        bottom: -330%;
+    }
+    .tooltip .tooltip7 {
+        bottom: -650%;
+    }
+    .tooltip .tooltip8 {
+        bottom: -735%;
+    }
+    .tooltip .tooltip9 {
+        bottom: -484%;
+    }
+    .tooltip .tooltip10 {
+        left: -103%;
+        bottom: 136%;
+        width: 346px;
+    }
+    .tooltip .tooltip11 {
+        left: -292%;
+    }
+}
+/* _____________________________________&&&&&&&&&&&&______________________________________ */
+/* determina telas em LANDSCAPE com altura de até 360 px */
+@media (orientation: landscape) and (max-height: 360px) {
+    .pagina {
+        max-width: 640px;
+        font-size: 1.8rem;
+    }
+    #quadro3 {
+        line-height: 2.2rem;
+        padding: 2% 6%;
+    }
+    #quadro4 {
+        line-height: 2.1rem;
+    }
+    .tooltip .tooltip3 {
+        bottom: -703%;
+    }
+    .tooltip .tooltip5 {
+        left: -98%;
+        bottom: -505%;
+        width: 300px;
+    }
+    .tooltip .tooltip6 {
+        bottom: -345%;
+    }
+    .tooltip .tooltip7 {
+        bottom: -677%;
+    }
+    .tooltip .tooltip8 {
+        bottom: -675%;
+        width: 300px;
+    }
+    .tooltip .tooltip9 {
+        bottom: -505%;
     }
 }
