--- a/styles/media-deismo.css
+++ b/styles/media-deismo.css
@@ -1,207 +1,159 @@
-/* determina telas com largura entre 383 a 428 px */
+/* determina telas com largura entre 391 a 428 px */
 @media (max-width:428px) {
     .pagina {
         font-size: 1.6rem;
         line-height: 1.8rem;
+        max-width: 414px;
     }
-
-    #quadro1 {
-        width: 100vw;
-    }
-
-    #perfil {
-        width: 54%;
-        object-fit: cover;
-    }
-
-    #texto-perfil {
-        padding: 2% 4% 0 3%;
-        width: 100%;
-    }
-
-    #quadro2 {
-        position: relative;
-    }
-
-    #quadro3 {
-        position: relative;
-    }
-
     h3 {
         font-size: 1.6rem;
     }
-    h4{
-        font-size: 1.7rem;
-        margin-bottom: 1%;
-    }
-    .tooltip .tooltip1 {
-        left: 13%;
-        bottom: 28%;
-        width: 250px;
-    }
-    .tooltip .tooltip2 {
-        left: 17%;
-        bottom: 12%;
-        width: 250px;
-    }
-    .tooltip .tooltip3 {
-        left: 15%;
-        bottom: 64%;
-        width: 250px;
-    }
-    .tooltip .tooltip4 {
-        left: 7%;
-        bottom: 50%;
-        width: 250px;
-    }
-    .tooltip .tooltip5 {
-        left: 16%;
-        bottom: 45%;
-        width: 250px;
-    }
-}
-
-/* ________________________________________&&&&&&&&&&&&___________________________________ */
-/* determina telas com largura até 383px */
-@media (max-width:383px) {
-    .pagina {
-        font-size: 1.4rem;
-        line-height: 1.6rem;
-    }
-
-    #quadro1 {
-        width: 100%;
-    }
-
-    #quadro3 {
-        grid-template-rows: 1fr 1.5fr;
-    }
-
     #perfil {
-        width: 45%;
+        width: 50%;
         object-fit: cover;
     }
-
     #texto-perfil {
         padding: 2% 4% 0 3%;
         width: 100%;
-    }
-
-    h3 {
-        font-size: 1.6rem;
-    }
-    h4{
-        font-size: 1.5rem;
-        margin-bottom: 1%;
-    }
-    .tooltip .tooltip1 {
-        left: 3%;
-        bottom: 31%;
-        width: 250px;
-    }
-    .tooltip .tooltip2 {
-        left: 5%;
-        bottom: 13%;
-        width: 200px;
-    }
-    .tooltip .tooltip3 {
-        left: 5%;
-        bottom: 65%;
-        width: 250px;
-    }
-    .tooltip .tooltip4 {
-        left: 5%;
-        bottom: 13%;
-        width: 250px;
-    }
-    .tooltip .tooltip5 {
-        left: 16%;
-        bottom: 45%;
-        width: 250px;
-    }
-}
-
-/* ________________________________________&&&&&&&&&&&&___________________________________ */
-/* determina telas em landscape com altura entre 391 a 428 px */
-@media (orientation: landscape) and (max-height: 428px) {
-
-    .pagina {
-        font-size: 1.9rem;
-        line-height: 2.6rem;
-        margin: 0 auto;
-        max-width: 790px;
-    }
-
-    #quadro1 {
-        height: 100vh;
-    }
-
-    h3 {
-        font-size: 1.9rem;
     }
     h4{
         font-size: 2.5rem;
-        margin-bottom: 3%;
+        margin-bottom: 1%;
     }
-
-    #perfil {
-        width: 300%;
-    }
-
-    #texto-perfil {
-        padding: 9% 5%;
-        line-height: 2.5rem;
-    }
-
     #quadro2 {
-        padding: 7% 6%;
-        line-height: 2.7rem;
-        height: 100vh;
+        padding: 2% 5% 0 5%;
     }
     #quadro3 {
-        padding: 4% 6%;
-        line-height: 2.7rem;
-        height: 100vh;
+        padding: 2% 5% 0 5%;
     }
 
     .tooltip .tooltip1 {
-        left: 25%;
-        bottom: 50%;
+        left: 6%;
+        bottom: 30%;
+        width: 360px;
     }
     .tooltip .tooltip2 {
-        left: 25%;
-        bottom: 40%;
+        left: 27%;
+        bottom: 14%;
+        width: 275px;
     }
     .tooltip .tooltip3 {
-        left: 12%;
-        bottom: 65%;
+        left: 32%;
+        bottom: 63%;
+        width: 250px;
     }
     .tooltip .tooltip4 {
-        left: 6%;
-        bottom: 56%;
+        left: 4%;
+        bottom: 49%;
     }
     .tooltip .tooltip5 {
-        left: 17%;
-        bottom: 45%;
+        left: 7%;
+        bottom: 44%;
     }
-    
-    #opcoes {
-        height: 100vh;
+}
+/* ________________________________________&&&&&&&&&&&&___________________________________ */
+/* determina telas com largura de 376 até 390px */
+@media (max-width:390px) {
+    .pagina {
+        font-size: 1.4rem;
+        line-height: 1.6rem;
+        max-width: 384px;
+    }
+    #perfil {
+        width: 43%;
+    }
+    #texto-perfil {
+        padding: 2% 4% 0 3%;
+        width: 100%;
+    }
+    h4{
+        font-size: 2.4rem;
+        margin-bottom: 1%;
+    }
+    .tooltip .tooltip1 {
+        left: 12%;
+        bottom: 27%;
+        width: 319px;
+    }
+    .tooltip .tooltip2 {
+        left: 18%;
+        bottom: 10%;
+        width: 250px;
+    }
+    .tooltip .tooltip3 {
+        left: 5%;
+        bottom: 61%;
+        width: 225px;
+    }
+    .tooltip .tooltip4 {
+        left: 14%;
+        bottom: 8%;
+        width: 250px;
+    }
+    .tooltip .tooltip5 {
+        left: 7%;
+        bottom: 8%;
+        width: 250px;
+    }
+}
+/* _____________________________________&&&&&&&&&&&&______________________________________ */
+/* determina telas com largura de 361 até 375px */
+@media (max-width:375px) {
+    .tooltip .tooltip1 {
+        left: 7%;
+    }
+    .tooltip .tooltip2 {
+        left: 17%;
+    }
+    .tooltip .tooltip3 {
+        left: 9%;
+        bottom: 62%;
+    }
+    .tooltip .tooltip4 {
+        left: 24%;
+        bottom: 12%;
+    }
+    .tooltip .tooltip5 {
+        left: 8%;
+        bottom: 7%;
+    }
+}
+/* _____________________________________&&&&&&&&&&&&______________________________________ */
+/* determina telas com largura até 360px */
+@media (max-width:360px) {
+    .tooltip .tooltip1 {
+        left: 6%;
+        bottom: 31%;
+    }
+    .tooltip .tooltip2 {
+        left: 24%;
+        bottom: 14%;
+    }
+    .tooltip .tooltip3 {
+        left: 30%;
+        bottom: 64%;
+    }
+    .tooltip .tooltip4 {
+        left: 5%;
+        bottom: 11%;
+    }
+    .tooltip .tooltip5 {
+        left: 11%;
+        bottom: 11%;
     }
 }
 
-/* _____________________________________&&&&&&&&&&&&______________________________________ */
-/* determina telas em landscape com altura de até 390 px */
-@media (orientation: landscape) and (max-height: 390px) {
+/* ________________________________________&&&&&&&&&&&&___________________________________ */
+/* determina telas em landscape com altura entre 376 a 428 px */
+@media (orientation: landscape) and (max-height: 428px) {
 
     .pagina {
-        font-size: 1.8rem;
-        line-height: 2.4rem;
-        max-width: 640px;
+        line-height: 2.6rem;
+        margin: 0 auto;
+        max-width: 883px;
     }
 
     #quadro1 {
-        width: 100%;
         height: 100vh;
     }
 
@@ -209,60 +161,168 @@
         font-size: 1.9rem;
     }
     h4{
-        font-size: 2.2rem;
+        font-size: 3.5rem;
         margin-bottom: 3%;
     }
+    hr {
+        margin-bottom: 5%;
+    }
     #perfil {
-        width: 380%;
+        width: 313%;
     }
-
     #texto-perfil {
-        padding: 4%;
-        line-height: 2.5rem;      
+        padding: 5%;
+        line-height: 2.7rem;      
     }
-
     #quadro2 {
-        padding: 3% 4%;
-        line-height: 2.5rem;
+        padding: 0% 4%;
+        line-height: 2.7rem;
         height: 100vh;
+        display: table-cell;
+        vertical-align: middle;
     }
     #quadro3 {
         padding: 3% 4%;
-        line-height: 2.1rem;
+        line-height: 2.9rem;
         height: 100vh;
     }
-    #cena{
+    #imgQ4 {
         height: 100vh;
+        width: 90%;
     }
-
     #opcoes {
         height: 100vh;
     }
-
+    .tooltip {
+        position: relative;
+    }
     .tooltip .tooltip1 {
-        left: 17%;
-        bottom: 30%;
+        left: 0;
+        bottom: 118%;
     }
-
     .tooltip .tooltip2 {
-        left: 34%;
-        bottom: 20%;
+        left: 0;
+        bottom: 122%;
     }
-
     .tooltip .tooltip3 {
-        left: 17%;
-        bottom: 44%;
+        left: -314%;
+        bottom: 117%;
     }
     .tooltip .tooltip4 {
-        left: 30%;
-        bottom: 63%;
+        left: -6%;
+        bottom: 115%;
     }
     .tooltip .tooltip5 {
-        left: 13%;
-        bottom: 51%;
+        left: -1%;
+        bottom: 114%;
     }
 
     #opcoes {
         height: 100vh;
+    }
+}
+/* _____________________________________&&&&&&&&&&&&______________________________________ */
+/* determina telas em LANDSCAPE com altura de 376 a 390px */
+@media (orientation: landscape) and (max-height: 390px) {
+    .pagina {
+        max-width: 845px;
+    }
+    #perfil {
+        width: 288%;
+    }
+    #texto-perfil {
+        padding: 4% 5%;
+        line-height: 2.7rem;
+    }
+    hr {
+        margin-bottom: 2%;
+    }
+    #quadro3 {
+        padding: 2% 4%;
+    }
+    .tooltip .tooltip3 {
+        left: 0;
+        bottom: 117%;
+    }
+}
+/* _____________________________________&&&&&&&&&&&&______________________________________ */
+/* determina telas em LANDSCAPE com altura de 361 até 375 px */
+@media (orientation: landscape) and (max-height: 375px) {
+    .pagina {
+        max-width: 667px;
+        font-size: 1.85rem;
+    }
+    #perfil {
+        width: 348%;
+        object-fit: cover;
+    }
+    #texto-perfil {
+        line-height: 2.4rem;
+    }
+    h4 {
+        font-size: 3.0rem;
+        margin-bottom: 0%;
+    }
+    hr {
+        border-width: 3px;
+    }
+    #quadro2 {
+        padding: 0% 3% 0 4%;
+        line-height: 2.5rem;
+    }
+    #quadro3 {
+        line-height: 2.4rem;
+    }
+    .tooltip .tooltip1 {
+        left: 0;
+        bottom: 119%;
+        width: 415px;
+    }
+    .tooltip .tooltip3 {
+        left: -3px;
+        bottom: 130%;
+    }
+    .tooltip .tooltip4 {
+        left: -156%;
+        bottom: 130%;
+    }
+
+}
+/* _____________________________________&&&&&&&&&&&&______________________________________ */
+/* determina telas em LANDSCAPE com altura de até 360 px */
+@media (orientation: landscape) and (max-height: 360px) {
+    .pagina {
+        max-width: 640px;
+        font-size: 1.9rem;
+    }
+    #perfil {
+        width: 323%;
+    }
+    #texto-perfil {
+        line-height: 2.3rem;
+        padding: 3% 5% 0 3%;
+    }
+    #quadro2 {
+        padding: 0% 5% 0 5%;
+        line-height: 2.3rem;
+    }
+    #quadro3 {
+        line-height: 2.2rem;
+        padding: 2% 3%;
+    }
+    .tooltip .tooltip1 {
+        left: -309px;
+        bottom: 130%;
+        width: 388px;
+    }
+    .tooltip .tooltip2 {
+        bottom: 130%;
+    }
+    .tooltip .tooltip4 {
+        left: -303%;
+        bottom: 140%;
+    }
+    .tooltip .tooltip5 {
+        bottom: 140%;
     }
 }
