--- a/styles/style-deismo.css
+++ b/styles/style-deismo.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 } 
 
 html {
@@ -14,10 +15,9 @@ body {
 }
 
 .pagina {
-    background-image: url("https://therealgoodlife.com/wp-content/uploads/2016/06/solid_kraft_paper-e1545844788572-500x334.jpeg");
-    background-color: rgb(160, 139, 114);
-    background-size: cover;
-    box-sizing: border-box;
+    background-image: url("../imagens/superficie-de-embalagem-de-cartao-liso-bege.jpg");
+    background-color: rgb(200, 187, 172);
+    background-size: contain;
     max-width: 800px;
     font-family: "Palatino Lynotype";
     font-size: 2.0rem;
@@ -32,26 +32,34 @@ h3 {
     color: brown;
     display: inline;
 }
-h4{
-    font-size: 2.5rem;
-    margin-bottom: 3%;
-}
 
+#quadro1 {
+    display: flex;
+    position: relative;
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
+}
 #perfil{
-    width: 228%;
+    width: 355%;
 }  
 #texto-perfil{
     padding: 3% 4%;
     text-align: justify;
-    text-justify: inter-word;
 }
-#quadro1 {
-    display: flex;
-    width: 800px;
-    position: relative;
-    scroll-snap-align: start;
-    box-sizing: border-box;
+h4 {
+    /* título */
+    font-size: 3rem;
+    line-height: 2rem;
+    color: rgb(54, 49, 34);
+    text-align: center;
 }
+hr {
+    border-color: rgb(70, 7, 3);
+    border-width: 3px;
+    box-shadow: 3px 3px 4px rgb(78, 95, 95);
+    margin: 2% auto;
+}
+
 #quadro2{
     position: relative;
     padding: 3% 5%;
@@ -68,7 +76,7 @@ h4{
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
-#cena{
+#imgQ4{
     width: 100%;
     scroll-snap-align: start;
     box-sizing: border-box;
@@ -87,10 +95,10 @@ h4{
     z-index: 2;
     visibility: hidden;
     position: absolute;
-    left: 210px;
-    bottom: 113px;
+    left: 353px;
+    bottom: 141px;
     padding: 0.5em;
-    width: 350px;
+    width: 405px;
     line-height: 18px;
     color: brown;
     box-shadow: 5px 10px brown;
@@ -105,8 +113,8 @@ h4{
     z-index: 2;
     visibility: hidden;
     position: absolute;
-    left: 240px;
-    bottom: 55px;
+    left: 406px;
+    bottom: 85px;
     padding: 0.5em;
     width: 350px;
     line-height: 18px;
@@ -123,10 +131,10 @@ h4{
     z-index: 2;
     visibility: hidden;
     position: absolute;
-    left: 133px;
-    bottom: 282px;
+    left: 247px;
+    bottom: 254px;
     padding: 0.5em;
-    width: 350px;
+    width: 310px;
     line-height: 18px;
     color: brown;
     box-shadow: 5px 10px brown;
@@ -141,10 +149,10 @@ h4{
     z-index: 2;
     visibility: hidden;
     position: absolute;
-    left: 135px;
-    bottom: 216px;
+    left: 36px;
+    bottom: 197px;
     padding: 0.5em;
-    width: 350px;
+    width: 360px;
     line-height: 18px;
     color: brown;
     box-shadow: 5px 10px brown;
@@ -159,8 +167,8 @@ h4{
     z-index: 2;
     visibility: hidden;
     position: absolute;
-    left: 130px;
-    bottom: 185px;
+    left: 37px;
+    bottom: 45px;
     padding: 0.5em;
     width: 350px;
     line-height: 18px;
